# nlp-practice

./: .gitignore  .gitmessage  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
config/: search_queries.json
data/: fine_food_reviews_1k.csv
notebooks/: 10_review_sim.ipynb
src/: github_api.py
src/collectors/: readme_collector.py  realease_collector.py  repo_collector.py  topic_collector.py
src/utils/: file_io.py  rate_limiter.py
