[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-practice"
version = "0.1.0"
description = "GitHub API 데이터 수집 및 NLP 실습 프로젝트 (저장소 메타데이터 수집 → 전처리 → EDA → NLP 분석)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "beautifulsoup4>=4.12.0",
    "nltk>=3.9.0",
    "scikit-learn>=1.5.0",
    "gensim>=4.3.0",
    "matplotlib>=3.9.0",
    "wordcloud>=1.9.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=3.8.0",
    "commitizen>=3.29.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ==========================================
# Ruff - Linter + Formatter
# ==========================================
[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    "python_template",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle 에러
    "W",   # pycodestyle 경고
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff 자체 규칙
]
ignore = [
    "E501", # 줄 길이 (formatter가 처리)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ==========================================
# Commitizen - Conventional Commits
# ==========================================
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.0"
version_files = ["pyproject.toml:version"]

[tool.commitizen.customize]
schema = """
<type>(<scope>): <subject>

<body>

<footer>
"""
schema_pattern = "^(feat|fix|docs|refactor|chore|revert|perf)(\\(\\w+\\))?!?: .{1,100}"
bump_pattern = "^(feat|fix|perf|refactor)"
bump_map = { "feat" = "MINOR", "fix" = "PATCH", "perf" = "PATCH", "refactor" = "PATCH" }
